Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7218

Client fails to obtain grant: ofd_grant()) fs2test-OST0003: client xxx requesting > 2GB grant 2147483648

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 2.5.3
    • 3
    • 9223372036854775807

      The problem has been detected on Lustre 2.5.3.90.

      The application running on the client is failing msync() operation with a SIGBUS signal. Additionally, read/write Posix IO performance is quite low.

      The issue comes from an invalid setting of max_dirty_mb tunable value to 2048. After some time the client consumes all its grants and the OSS log the following error message.

      1441296045 2015 Sep 3 18:00:45 valx7 kern err kernel LustreError: 16623:0:(ofd_grant.c:607:ofd_grant()) fs2test-OST0003: client fa81e2f5-d6fc-f980-5a79-f76c8a08cec8/ffff880629792c00 requesting > 2GB grant 2147483648
      

      Indeed the max_dirty_mb value should only be set to a value strictly lower than 2GB.

      I will post a patch that fixes osc_max_dirty_mb_seq_write() routine to prevent setting the value to 2048.

            pichong Gregoire Pichon
            pichong Gregoire Pichon
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: